--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,8 +11,8 @@ jobs:
       - name: Docker Login
         uses: docker/login-action@v1
         with:
-          - username: "${{secrets.DOCKER_USERNAME}}"
-          - password: "${{secrets.DOCKER_TOKEN}}"
+          username: "${{secrets.DOCKER_USERNAME}}"
+          password: "${{secrets.DOCKER_TOKEN}}"
 
       - name: Build and Push Pause Demo
         uses: docker/build-push-action@v2
