--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,6 +38,6 @@ jobs:
       - name: Build and Push Noexpose Demo
         uses: docker/build-push-action@v2
         with:
-          context: noexpose-container
+          context: noexpose
           push: true
           tags: debdutdeb/noexpose-demo:v1
