Renaming rocket.chat.build to meteorjs.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,4 +47,4 @@ jobs:
         with:
           context: rocketchat-build
           push: true
-          tags: debdutdeb/rocket.chat.build:latest
+          tags: debdutdeb/meteorjs:latest
