--- a/rocketchat-build/Dockerfile
+++ b/rocketchat-build/Dockerfile
@@ -1,17 +1,21 @@
 FROM ubuntu:20.04
 
+LABEL maintainer="Debdut Chakraborty"
+
 COPY entrypoint.sh /
 
 RUN apt update && \
 	DEBIAN_FRONTEND=noninteractive apt install --no-install-recommends -y \
 	sudo g++ build-essential git curl ca-certificates python3-minimal && \
-	useradd -mG sudo -s /bin/bash rocketbuild && \
-	echo '%rocketbuild ALL=(ALL) NOPASSWD: ALL' > /etc/sudoers.d/rocketbuild && \
+	useradd -mG sudo -s /bin/bash meteorjs && \
+	echo '%meteorjs ALL=(ALL) NOPASSWD: ALL' > /etc/sudoers.d/meteorjs && \
 	chmod a+x /entrypoint.sh
 
-USER rocketbuild
-WORKDIR /home/rocketbuild
+USER meteorjs
+WORKDIR /home/meteorjs
 
 RUN curl https://install.meteor.com/ -s | sh -x
+
+VOLUME [ "/home/meteorjs/.meteor/packages" ]
 
 ENTRYPOINT [ "/entrypoint.sh" ]
