Updated: docker-compose.yml
1. Changed the names of environment variables.
2. Tracing enabled for command.

--- a/rocketchat-build/docker-compose.yml
+++ b/rocketchat-build/docker-compose.yml
@@ -4,24 +4,24 @@ services:
     RocketChatBuild:
         image: debdutdeb/meteorjs
         user: meteorjs
-        working_dir: ${BUILD_TARGET_DIR}
+        working_dir: ${BUILD_DIR}
         ports:
             - 
                 target: 3000
                 published: 3000
                 protocol: tcp
-        environment: [BUILD_TARGET_DIR]
+        environment: [BUILD_DIR]
         volumes:
             -
                 type: bind
-                source: ${BUILD_SOURCE_DIR}
-                target: ${BUILD_TARGET_DIR}
+                source: ${BUILD_HOST_DIR}
+                target: ${BUILD_DIR}
             -
                 type: volume
                 source: MeteorPackages
                 target: /home/meteorjs/.meteor/packages
         command: |
-            sh -c "
+            sh -xc "
                 meteor npm install && \
                 meteor npm start
             "
