--- a/rocketchat-build/Dockerfile
+++ b/rocketchat-build/Dockerfile
@@ -6,7 +6,13 @@ COPY entrypoint.sh /
 
 RUN apt update && \
 	DEBIAN_FRONTEND=noninteractive apt install --no-install-recommends -y \
-	sudo g++ build-essential git curl ca-certificates python3-minimal && \
+	sudo \
+	g++ \
+	build-essential \
+	git \
+	curl \
+	ca-certificates \
+	python3 && \
 	useradd -mG sudo -s /bin/bash meteorjs && \
 	echo '%meteorjs ALL=(ALL) NOPASSWD: ALL' > /etc/sudoers.d/meteorjs && \
 	chmod a+x /entrypoint.sh
